reservation confirm/success modal updates

--- a/app/server/views/dashboard/dashboard-header.jade
+++ b/app/server/views/dashboard/dashboard-header.jade
@@ -15,7 +15,7 @@ div.navbar.navbar-fixed-top
 				li.divider-vertical
 				li
 					button#btn-about.btn.btn-primary
-						i.icon-heart.icon-white
+						i.icon-home.icon-white
 						| About Bridge
 				li.divider-vertical
 
