changing mental service to counseling

--- a/app/server/views/dashboard/select-provider.jade
+++ b/app/server/views/dashboard/select-provider.jade
@@ -26,9 +26,9 @@ include dashboard-header
 									div(data-sub="#{s.sub}").service
 										div.service-chrome
 										div.service-header
-											h2 #{s.cat}
+											h2 #{s.sub}
 										div.service-thumbnail
-											img(src='/img/icons/large/icon-'+s.cat+'-general.png')
+											img(src='/img/icons/large/icon-'+s.cat+'-'+s.sub+'.png')
 										div.service-progress
 											div.v-progress
 												div.v-progress-bar
