updating reservation confirm / success modals

--- a/app/server/views/dashboard/modals/reservation-success.jade
+++ b/app/server/views/dashboard/modals/reservation-success.jade
@@ -8,33 +8,15 @@
 	.modal-body
 		.wrapper-center
 			ul.l-horizontal.clearfix.reservation-entries
+			- for (var i = session.services.length - 1; i >= 0; i--)
+				- var s = session.services[i];
 				li
 					div.service
 						div.service-chrome
 						div.service-header
-							h2 Mental Health
+							h2 #{s.sub}
 						div.service-thumbnail
-							img(src='/img/icons/large/icon-mental-general.png')
-						div.service-progress
-							div.v-progress
-								div.v-progress-bar
-				li
-					div.service
-						div.service-chrome
-						div.service-header
-							h2 Mental Health
-						div.service-thumbnail
-							img(src='/img/icons/large/icon-mental-general.png')
-						div.service-progress
-							div.v-progress
-								div.v-progress-bar
-				li
-					div.service
-						div.service-chrome
-						div.service-header
-							h2 Mental Health
-						div.service-thumbnail
-							img(src='/img/icons/large/icon-mental-general.png')
+							img(src='/img/icons/large/icon-'+s.cat+'-'+s.sub+'.png')
 						div.service-progress
 							div.v-progress
 								div.v-progress-bar
