--- a/app/server/views/dashboard/modals/reservation-confirm.jade
+++ b/app/server/views/dashboard/modals/reservation-confirm.jade
@@ -5,6 +5,20 @@
 		h3 Are you sure you want to make these reservations, 
 			span.username #{session.client.fname} #{session.client.lname}
 	.modal-body
+		.wrapper-center
+			ul.l-horizontal.clearfix.reservation-entries
+			- for (var i = session.services.length - 1; i >= 0; i--)
+				- var s = session.services[i];
+				li
+					div.service.is-enabled
+						div.service-chrome
+						div.service-header
+							h2 #{s.sub}
+						div.service-thumbnail
+							img(src='/img/icons/large/icon-'+s.cat+'-'+s.sub+'.png')
+						div.service-progress
+							div.v-progress
+								div.v-progress-bar
 		.button-group
 			a.button.button-modal.button-no.quiet No, Go Back
 			a.button.button-modal.button-yes.loud Yes, Reserve
