--- a/app/server/views/dashboard/select-provider.jade
+++ b/app/server/views/dashboard/select-provider.jade
@@ -22,6 +22,12 @@ include dashboard-header
 							- var total = Math.min(session.services.length, 3);
 							- for (var k = 0; k < total; k++)
 								- var s = session.services[k];
+								- for (var n = 0; n < providers[i].inv.length; n++) {
+									- if (providers[i].inv[n].name == s.cat){ var cat = providers[i].inv[n]; break; }
+								- }
+								- for (var n = 0; n < cat.fields.length; n++) {
+									- if (cat.fields[n].name == s.sub){ var sub = cat.fields[n]; break; }
+								- }
 								li
 									div(data-sub="#{s.sub}").service
 										div.service-chrome
@@ -31,7 +37,7 @@ include dashboard-header
 											img(src='/img/icons/large/icon-'+s.cat+'-'+s.sub+'.png')
 										div.service-progress
 											div.v-progress
-												- var percent = parseInt(100 * (s.avail / s.total), 10);
+												- var percent = parseInt(100 * (sub.avail / sub.total), 10);
 												div.v-progress-bar(style='margin-top : '+percent+'px')
 							li.pull-right
 								a(data-provider="#{providers[i].name}").button.button-reserve.button-reserve-fat.loud Reserve
