new bridge logo

--- a/app/public/css/layout.css
+++ b/app/public/css/layout.css
@@ -16,3 +16,4 @@ hr.tight{margin:18px 0 0}
 }.page-container .heading,.page-container-cleared .heading{color:#808080;text-shadow:-1px 1px 0 #fff;-moz-text-shadow:-1px 1px 0 #fff;-webkit-text-shadow:-1px 1px 0 #fff;font-size:1.4em;padding:20px 0 0 0}
 .center-container{width:940px;height:100%;margin:auto;text-align:center;padding:0 20px 0 20px}
 .footer{position:fixed;height:20px;bottom:0;width:100%;background:#222}
+.bridge-logo{position:absolute;top:-8px;margin-left:-45px;width:100px;height:100px;background:url("/img/icons/ui/bridge-logo.png")}
