--- a/app/server/views/dashboard/dashboard-header.jade
+++ b/app/server/views/dashboard/dashboard-header.jade
@@ -18,6 +18,7 @@ div.navbar.navbar-fixed-top
 						i.icon-home.icon-white
 						| About Bridge
 				li.divider-vertical
+			.bridge-logo
 
 include modals/about
 include modals/welcome
