--- a/app/public/css/layout.styl
+++ b/app/public/css/layout.styl
@@ -114,3 +114,11 @@ hr.tight
 	bottom 0
 	width 100%
 	background #222;
+
+.bridge-logo
+	position absolute
+	top -8px
+	margin-left -45px
+	width 100px
+	height 100px
+	background url('/img/icons/ui/bridge-logo.png')
