added down state to dashboard-2 reserve buttons, moved updateProgressBars into global.js and updated the dashboard-1 route to send along the organizations

--- a/app/public/css/modules.styl
+++ b/app/public/css/modules.styl
@@ -331,6 +331,9 @@ button i
 
 .button.loud, .button.is-enabled
 	loudButton()
+.button.loud:active
+	background-image linear-gradient(top, #51C001, #76CC06)
+	box-shadow inset 0px 1px 5px rgba(0, 0, 0, 0.2)
 
 .button.quiet, .button.is-disabled
 	quietButton()
