--- a/app/server/views/dashboard/select-services.jade
+++ b/app/server/views/dashboard/select-services.jade
@@ -1,5 +1,6 @@
 script
 	var services = !{JSON.stringify(services)};
+	var orgs = !{JSON.stringify(orgs)};
 include dashboard-header
 
 #select-services.container
