--- a/app/server/views/dashboard/select-services.jade
+++ b/app/server/views/dashboard/select-services.jade
@@ -20,7 +20,7 @@ include dashboard-header
 								div.v-progress
 									div.v-progress-bar
 	div.row
-		a#request-services.button.button-reserve Reserve
+		a#request-services.button.button-reserve.is-disabled Reserve
 	div.striped
 
 include modals/service-selection
