--- a/app/public/css/modules.styl
+++ b/app/public/css/modules.styl
@@ -429,8 +429,13 @@ button i
 .username, .emphasize
 	color #6EB6B5
 
-span.provider
+span.provider, .warning
 	color #E50085
+
+.warning
+	font-weight bold
+	margin -5px 0 0
+	text-decoration underline
 
 .logged-out
 	color #C12885
