--- a/app/server/views/dashboard/modals/service-selection.jade
+++ b/app/server/views/dashboard/modals/service-selection.jade
@@ -6,6 +6,7 @@ script(type="text/html", id="modal-service-selection")
 			h3 You have selected 
 				span.emphasize {{ service.name }}
 			p Please select the subcategory that fits your needs:
+			p.warning.hide Please limit your selections to three categories
 		.modal-body
 			.wrapper-center
 				ul.l-horizontal.clearfix.reservation-entries
