--- a/app/public/css/pages.styl
+++ b/app/public/css/pages.styl
@@ -13,7 +13,10 @@ Page styles are specific to certain areas of the site. For instance if you want 
 	!Note! Don't import nib into this file. These styles were created without nib and 
 	adding it will break this stylesheet!
 */
-
+hr
+	height 1px
+	color #ccc
+	background-color #ccc
 #select-services, #select-providers
 	margin-top:3%
 #live
@@ -35,7 +38,7 @@ Page styles are specific to certain areas of the site. For instance if you want 
 #live p
 	font-size 18px
 	font-weight bold
-#live .orgName 
+#live .orgName
 	float left
 	margin-right 10px
 #live .orgAddy
@@ -59,7 +62,7 @@ Page styles are specific to certain areas of the site. For instance if you want 
 #live .service .text .avail
 	text-align right
 #live .service hr
-	margin 5px 0 3px 0
+	margin 5px 0 8px 0
 #live .service .icon img
 	width 24px
 	height auto
@@ -258,7 +261,7 @@ Page styles are specific to certain areas of the site. For instance if you want 
 #clients-page #controls
 	position absolute
 	top 4px
-	right 235px
+	right 323px
 #clients-page #controls
 	padding 10px
 #clients-page #controls .input-medium
@@ -278,7 +281,7 @@ Page styles are specific to certain areas of the site. For instance if you want 
 	position absolute
 	top -8px
 	right -8px
-	background url('/img/icons/edit.png')
+	background url('/img/icons/ui/edit.png')
 
 // client registration & editing //
 
