--- a/app/public/css/modules.styl
+++ b/app/public/css/modules.styl
@@ -367,7 +367,8 @@ button i
 	height 35px
 	padding-left 55px
 	padding-right 10px
-	margin-bottom 35px
+	margin-top 12px
+	margin-bottom 20px
 	font-size 22px
 	line-height 35px
 .button-back > .icon-back-arrow
