updating about page

--- a/app/server/views/dashboard/modals/about.jade
+++ b/app/server/views/dashboard/modals/about.jade
@@ -2,15 +2,14 @@
 .modal-about.modal.hide.fade
 	.modal-header
 		button.close(data-dismiss='modal') x
-		h3 San Francisco Bridge
+		h3 About Bridge
 	.modal-body
 		p(style='padding:10px')
-			| Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-			| sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-			| Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-			| nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-			| reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-			| pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-			| culpa qui officia deserunt mollit anim id est laborum.
+			| The San Francisco Bridge Platform aims to provide the homeless shelters & service providers 
+			| who assist our neighbors in need a way to communicate the inventory of their services in <strong>realtime</strong>.<br><br>
+			| We believe access to <a href='http://bridge.braitsch.io/live'>realtime inventory data</a> will greatly improve the process of connecting people 
+			| with the services they need while also helping providers cooperate together better than ever before.<br><br>
+			| Bridge was conceived during the <a href='http://creative-currency.org/'>Creative Currency</a> festival this past spring and will be launching as a pilot program in San Francisco this fall.<br><br>
+			| If you are interested in learning more or would like to pilot Bridge in your city –<br><br><a href="mailto:stephen@braitsch.io?subject=San Francisco Bridge Project">Please get in touch!</a>
 	.modal-footer
 		button(data-dismiss="modal")#ok.btn.btn-warning OK
