--- a/app/server/views/dashboard/select-provider.jade
+++ b/app/server/views/dashboard/select-provider.jade
@@ -41,7 +41,8 @@ include dashboard-header
 											div.v-progress
 												- var percent = parseInt(100 - (100 * (sub.avail / sub.total)), 10);
 												- // console.log(s.cat, s.sub, 'percent =', percent);
-												div.v-progress-bar(style='margin-top : '+percent+'px')
+												//- div.v-progress-bar(style='margin-top : '+percent+'px')
+												div.v-progress-bar
 							li.pull-right
 								a(data-provider="#{providers[i].name}").button.button-reserve.button-reserve-fat.loud Reserve
 	div.striped
