updating general contact email

--- a/app/server/views/dashboard/modals/about.jade
+++ b/app/server/views/dashboard/modals/about.jade
@@ -10,6 +10,6 @@
 			| We believe access to <a href='http://bridge.braitsch.io/live'>realtime inventory data</a> will greatly improve the process of connecting people 
 			| with the services they need while also helping providers cooperate together better than ever before.<br><br>
 			| Bridge was conceived during the <a href='http://creative-currency.org/'>Creative Currency</a> festival this past spring and will be launching as a pilot program in San Francisco this fall.<br><br>
-			| If you are interested in learning more or would like to pilot Bridge in your city –<br><br><a href="mailto:stephen@braitsch.io?subject=San Francisco Bridge Project">Please get in touch!</a>
+			| If you are interested in learning more or would like to pilot Bridge in your city –<br><br><a href="mailto:hello@bridge.tl?subject=San Francisco Bridge Project">Please get in touch!</a>
 	.modal-footer
 		button(data-dismiss="modal")#ok.btn.btn-warning OK
