--- a/app/public/css/modules.styl
+++ b/app/public/css/modules.styl
@@ -394,7 +394,13 @@ button i
 
 .navbar button
 	width 100px
-
+.navbar #btn-reserve
+	width 160px
+.navbar #btn-provider
+	width 160px
+.navbar #btn-network
+	width 36px
+	
 .navbar .nav > li > a, .navbar .nav > li > a:hover, .navbar .nav > li > #logged-in-user-name
 	// color #FFF
 	// font-size 18px
