--- a/app/server/views/dashboard/dashboard-header.jade
+++ b/app/server/views/dashboard/dashboard-header.jade
@@ -9,18 +9,21 @@ div.navbar.navbar-fixed-top
 					a#client-name
 				li.divider-vertical
 				li
-					button#btn-login.btn.btn-primary
-						i.icon-lock.icon-white
-						| Log In
+					button#btn-reserve.btn.btn-primary
+						i.icon-home.icon-white
+						| Reserve Services
 				li.divider-vertical
 				li
-					button#btn-about.btn.btn-primary
-						i.icon-home.icon-white
-						| About Bridge
+					button#btn-provider.btn.btn-primary
+						i.icon-lock.icon-white
+						| Provider Login
+				li.divider-vertical
+				li
+					button#btn-network.btn.btn-primary
+						i.icon-globe.icon-white
 				li.divider-vertical
 			.bridge-logo
 
-include modals/about
 include modals/welcome
 include modals/goodbye
 include modals/timeout
