--- a/app/server/views/signup/signup.jade
+++ b/app/server/views/signup/signup.jade
@@ -1,13 +1,17 @@
 
-#signup-container
-	include signup-1
-	include signup-2
-include ../modals/alert
-include ../modals/form-errors
+extends ../layout
 
-script(src='/vendor/jquery.min.js')
-script(src='/vendor/jquery.form.js')
-script(src='/vendor/bootstrap-modal.js')
-script(src='/vendor/bootstrap-transition.js')
-script(src='/js/signup/signup.js')
-script(src='/js/signup/signupValidator.js')
+block content
+	#signup-container
+		include signup-1
+		include signup-2
+	include ../modals/alert
+	include ../modals/form-errors
+
+block scripts
+	script(src='/vendor/jquery.min.js')
+	script(src='/vendor/jquery.form.js')
+	script(src='/vendor/bootstrap-modal.js')
+	script(src='/vendor/bootstrap-transition.js')
+	script(src='/js/signup/signup.js')
+	script(src='/js/signup/signupValidator.js')
