--- a/app/server/views/404.jade
+++ b/app/server/views/404.jade
@@ -1,1 +1,4 @@
-#four04 I'm sorry, the page or resource you are searching for is currently unavailable.
+extends layout
+
+block content
+	#four04 I'm sorry, the page or resource you are searching for is currently unavailable.
