--- a/app/server/views/aux/reservations.jade
+++ b/app/server/views/aux/reservations.jade
@@ -1,22 +1,24 @@
 
-- var capitalize = function(s){return s.replace(/\w\S*/g, function(txt){return txt.charAt(0).toUpperCase() + txt.substr(1).toLowerCase();});}
-div(style='margin:20px')
-	table.table.table-bordered.table-striped
-		thead
-			tr
-				th #
-				th Client Id
-				th Services
-				th Provider
-				th Reservation Made
-		tbody
-		- for (var i = 0; i < reservations.length; i++)
-			tr
-				td= i+1
-				td= reservations[i].client
-				td
-					- var o = reservations[i].services;
-					- for (var k = 0; k < o.length; k++)
-						| #{o[k].cat} :: #{o[k].sub}<br>
-				td= capitalize(reservations[i].provider)
-				td= reservations[i].date
+extends ../layout
+
+
+	div(style='margin:20px')
+		table.table.table-bordered.table-striped
+			thead
+				tr
+					th #
+					th Client Id
+					th Services
+					th Provider
+					th Reservation Made
+			tbody
+			- for (var i = 0; i < reservations.length; i++)
+				tr
+					td= i+1
+					td= reservations[i].client
+					td
+						- var o = reservations[i].services;
+						- for (var k = 0; k < o.length; k++)
+							| #{o[k].cat} :: #{o[k].sub}<br>
+					td= capitalize(reservations[i].provider)
+					td= reservations[i].date
