--- a/app/server/views/dashboard/network-status.jade
+++ b/app/server/views/dashboard/network-status.jade
@@ -1,68 +1,71 @@
-script
-	var orgs = !{JSON.stringify(orgs)};
-- var capitalize = function(s){return s.replace(/\w\S*/g, function(txt){return txt.charAt(0).toUpperCase() + txt.substr(1).toLowerCase();});}
-#live
-	div.navbar.navbar-fixed-top
-		div.navbar-inner
-			div.container-fluid
-					ul.nav.pull-left
-						li
-							.brand Bridge Network Status
-						li
-							.status-icon
-						li.divider-vertical
-						li.dropdown
-							a.dropdown-toggle(href='#', data-toggle='dropdown')
-								| Jump To Provider
-								b.caret(style='margin-left:8px')
-							ul.dropdown-menu
-								- for (var i = orgs.length - 1; i >= 0; i--)
-									- var oid = orgs[i].name.replace(/\s/g, '-');
-									li
-										a(href='#'+oid).anchor #{capitalize(orgs[i].name)}
-						li.divider-vertical
-						- for (var i = 0; i < services.length; i++)
-							li
-								.checkbox.inline
-									input(type='checkbox', value=services[i].name, checked='yes')
-									| #{capitalize(services[i].name)}
-							li.divider-vertical
-						li
-							button.btn.btn-primary
-								i.icon-ok.icon-white
-								| Select All
-						li.divider-vertical
-	- for (var i = orgs.length - 1; i >= 0; i--)
-		- var oid = orgs[i].name.replace(/\s/g, '-');
-		div(id=oid).org
-			p.orgName #{capitalize(orgs[i].name)}
-			p.orgAddy #{capitalize(orgs[i].addy1)} #{orgs[i].addy2} – #{capitalize(orgs[i].city)}, #{capitalize(orgs[i].state)} – #{capitalize(orgs[i].phone)}
-			#services
-				- for (var k = 0; k < services.length; k++)
-					- var s = services[k];
-					.service(id=s.name)
-						.cat
-							.icon
-								img(src='/img/icons/small/icon-'+s.name+'-general.png')
-							.text
-								.name #{capitalize(s.name)}
-								.avail 0 / 0
-						hr
-						- for (var n = s.fields.length - 1; n >= 0; n--)
-							- var f = s.fields[n];
-							.sub(id=s.name+'-'+f)
-								.bkgd
-								.icon
-									img(src='/img/icons/small/icon-'+s.name+'-'+f+'.png')
-								.text
-									.name #{capitalize(f.replace('-', ' '))}
-									.avail 0 / 0
-		hr
+extends ../layout
 
-script(src='/socket.io/socket.io.js')
-script(src='/vendor/jquery.min.js')
-script(src='/vendor/bootstrap-modal.js')
-script(src='/vendor/bootstrap-dropdown.js')
-script(src='/vendor/bootstrap-transition.js')
-script(src='/js/dashboard/network-status.js')
-script(src='/js/utils/globals.js')
+block content
+	script
+		var orgs = !{JSON.stringify(orgs)};
+	#live
+		div.navbar.navbar-fixed-top
+			div.navbar-inner
+				div.container-fluid
+						ul.nav.pull-left
+							li
+								.brand Bridge Network Status
+							li
+								.status-icon
+							li.divider-vertical
+							li.dropdown
+								a.dropdown-toggle(href='#', data-toggle='dropdown')
+									| Jump To Provider
+									b.caret(style='margin-left:8px')
+								ul.dropdown-menu
+									- for (var i = orgs.length - 1; i >= 0; i--)
+										- var oid = orgs[i].name.replace(/\s/g, '-');
+										li
+											a(href='#'+oid).anchor #{capitalize(orgs[i].name)}
+							li.divider-vertical
+							- for (var i = 0; i < services.length; i++)
+								li
+									.checkbox.inline
+										input(type='checkbox', value=services[i].name, checked='yes')
+										| #{capitalize(services[i].name)}
+								li.divider-vertical
+							li
+								button.btn.btn-primary
+									i.icon-ok.icon-white
+									| Select All
+							li.divider-vertical
+		- for (var i = orgs.length - 1; i >= 0; i--)
+			- var oid = orgs[i].name.replace(/\s/g, '-');
+			div(id=oid).org
+				p.orgName #{capitalize(orgs[i].name)}
+				p.orgAddy #{capitalize(orgs[i].addy1)} #{orgs[i].addy2} – #{capitalize(orgs[i].city)}, #{capitalize(orgs[i].state)} – #{capitalize(orgs[i].phone)}
+				#services
+					- for (var k = 0; k < services.length; k++)
+						- var s = services[k];
+						.service(id=s.name)
+							.cat
+								.icon
+									img(src='/img/icons/small/icon-'+s.name+'-general.png')
+								.text
+									.name #{capitalize(s.name)}
+									.avail 0 / 0
+							hr
+							- for (var n = s.fields.length - 1; n >= 0; n--)
+								- var f = s.fields[n];
+								.sub(id=s.name+'-'+f)
+									.bkgd
+									.icon
+										img(src='/img/icons/small/icon-'+s.name+'-'+f+'.png')
+									.text
+										.name #{capitalize(f.replace('-', ' '))}
+										.avail 0 / 0
+			hr
+
+block scripts
+	script(src='/socket.io/socket.io.js')
+	script(src='/vendor/jquery.min.js')
+	script(src='/vendor/bootstrap-modal.js')
+	script(src='/vendor/bootstrap-dropdown.js')
+	script(src='/vendor/bootstrap-transition.js')
+	script(src='/js/dashboard/network-status.js')
+	script(src='/js/utils/globals.js')
