--- a/app/server/views/dashboard/select-provider.jade
+++ b/app/server/views/dashboard/select-provider.jade
@@ -1,63 +1,68 @@
-script
-	var providers = !{JSON.stringify(providers)};
-	var session = !{JSON.stringify(session)};
-include dashboard-header
 
-#select-providers.container
-	div.row
-		div.reservation-wrapper.wrapper-center
-			a.button.button-back.quiet Back
-				i.icon-back-arrow
-			- for (var i = providers.length - 1; i >= 0; i--)
-				div.reservation
-					div.reservation-header
-						ul.l-horizontal.clearfix.reservation-info
-							li.reservation-org #{capitalize(providers[i].name)}
-							li |
-							li.reservation-address #{providers[i].addy1} #{providers[i].addy2}, #{providers[i].city}, #{providers[i].state}
-							li |
-							li.reservation-phone #{providers[i].phone}
-					div.reservation-body
-						ul.l-horizontal.clearfix.reservation-entries
-							- var total = Math.min(session.services.length, 3);
-							- for (var k = 0; k < total; k++)
-								- var s = session.services[k];
-								- for (var n = 0; n < providers[i].inv.length; n++) {
-									- if (providers[i].inv[n].name == s.cat){ var cat = providers[i].inv[n]; break; }
-								- }
-								- if (cat){
-									- for (var n = 0; n < cat.fields.length; n++) {
-										- if (cat.fields[n].name == s.sub){ var sub = cat.fields[n]; break; }
+extends ../layout
+
+block content
+	script
+		var providers = !{JSON.stringify(providers)};
+		var session = !{JSON.stringify(session)};
+	include dashboard-header
+
+	#select-providers.container
+		div.row
+			div.reservation-wrapper.wrapper-center
+				a.button.button-back.quiet Back
+					i.icon-back-arrow
+				- for (var i = providers.length - 1; i >= 0; i--)
+					div.reservation
+						div.reservation-header
+							ul.l-horizontal.clearfix.reservation-info
+								li.reservation-org #{capitalize(providers[i].name)}
+								li |
+								li.reservation-address #{providers[i].addy1} #{providers[i].addy2}, #{providers[i].city}, #{providers[i].state}
+								li |
+								li.reservation-phone #{providers[i].phone}
+						div.reservation-body
+							ul.l-horizontal.clearfix.reservation-entries
+								- var total = Math.min(session.services.length, 3);
+								- for (var k = 0; k < total; k++)
+									- var s = session.services[k];
+									- for (var n = 0; n < providers[i].inv.length; n++) {
+										- if (providers[i].inv[n].name == s.cat){ var cat = providers[i].inv[n]; break; }
 									- }
-								- }
-								li
-									div(data-sub="#{s.sub}").service
-										div.service-chrome
-										div.service-header
-											h2 #{s.sub}
-										div.service-thumbnail
-											img(src='/img/icons/large/icon-'+s.cat+'-'+s.sub+'.png')
-										div.service-progress
-											div.v-progress
-												- var percent = parseInt(100 - (100 * (sub.avail / sub.total)), 10);
-												- // console.log(s.cat, s.sub, 'percent =', percent);
-												//- div.v-progress-bar(style='margin-top : '+percent+'px')
-												div.v-progress-bar
-							li.pull-right
-								a(data-provider="#{providers[i].name}").button.button-reserve.button-reserve-fat.loud Reserve
-	div.striped
+									- if (cat){
+										- for (var n = 0; n < cat.fields.length; n++) {
+											- if (cat.fields[n].name == s.sub){ var sub = cat.fields[n]; break; }
+										- }
+									- }
+									li
+										div(data-sub="#{s.sub}").service
+											div.service-chrome
+											div.service-header
+												h2 #{s.sub}
+											div.service-thumbnail
+												img(src='/img/icons/large/icon-'+s.cat+'-'+s.sub+'.png')
+											div.service-progress
+												div.v-progress
+													- var percent = parseInt(100 - (100 * (sub.avail / sub.total)), 10);
+													- // console.log(s.cat, s.sub, 'percent =', percent);
+													//- div.v-progress-bar(style='margin-top : '+percent+'px')
+													div.v-progress-bar
+								li.pull-right
+									a(data-provider="#{providers[i].name}").button.button-reserve.button-reserve-fat.loud Reserve
+		div.striped
 
-include modals/reservation-confirm
-include modals/reservation-success
+	include modals/reservation-confirm
+	include modals/reservation-success
 
-script(src='/socket.io/socket.io.js')
-script(src='/vendor/jquery.min.js')
-script(src='/vendor/jquery.pubsub.js')
-script(src='/vendor/underscore.min.js')
-script(src='/vendor/mustache.js')
-script(src='/vendor/bootstrap-modal.js')
-script(src='/vendor/bootstrap-transition.js')
-script(src='/js/dashboard/dashboard-header.js')
-script(src='/js/dashboard/select-provider.js')
-script(src='/js/utils/globals.js')
-script(src='/js/utils/timeout.js')
+block scripts
+	script(src='/socket.io/socket.io.js')
+	script(src='/vendor/jquery.min.js')
+	script(src='/vendor/jquery.pubsub.js')
+	script(src='/vendor/underscore.min.js')
+	script(src='/vendor/mustache.js')
+	script(src='/vendor/bootstrap-modal.js')
+	script(src='/vendor/bootstrap-transition.js')
+	script(src='/js/dashboard/dashboard-header.js')
+	script(src='/js/dashboard/select-provider.js')
+	script(src='/js/utils/globals.js')
+	script(src='/js/utils/timeout.js')
