--- a/app/server/views/login.jade
+++ b/app/server/views/login.jade
@@ -1,29 +1,32 @@
+extends layout
 
-#login-container
-    form( method="post")#login-form.well.span4
-        h1 Hello!
-        p.subheading Please Login To Your Account
-        label Email 
-        input(type="text", name="email", id='email').span4.required
-        label Password
-        input(type="password", name="passw", id='passw').span4.required
-        button(type="submit")#btn-login.btn.btn-primary
-            i.icon-lock.icon-white
-            | Sign in
-        label#remember-me.checkbox Remember Me
-            input(type="checkbox", checked='checked')
-        div.clear-fix
-        hr
-        div.btm-links
-            a(href='#')#forgot-password Forgot Your Password? 
-            a(href='/signup')#create-account Create An Account
-    
-include modals/alert
-include modals/email-password
+block content
+	#login-container
+		form( method="post")#login-form.well.span4
+			h1 Hello!
+			p.subheading Please Login To Your Account
+			label Email 
+			input(type="text", name="email", id='email').span4.required
+			label Password
+			input(type="password", name="passw", id='passw').span4.required
+			button(type="submit")#btn-login.btn.btn-primary
+				i.icon-lock.icon-white
+				| Sign in
+			label#remember-me.checkbox Remember Me
+				input(type="checkbox", checked='checked')
+			div.clear-fix
+			hr
+			div.btm-links
+				a(href='#')#forgot-password Forgot Your Password? 
+				a(href='/signup')#create-account Create An Account
 
-script(src='/vendor/jquery.min.js')
-script(src='/vendor/jquery.form.js')
-script(src='/vendor/bootstrap-modal.js')
-script(src='/vendor/bootstrap-transition.js')
-script(src='/js/login/login.js')
-script(src='/js/login/login-validator.js')
+	include modals/alert
+	include modals/email-password
+
+block scripts
+	script(src='/vendor/jquery.min.js')
+	script(src='/vendor/jquery.form.js')
+	script(src='/vendor/bootstrap-modal.js')
+	script(src='/vendor/bootstrap-transition.js')
+	script(src='/js/login/login.js')
+	script(src='/js/login/login-validator.js')
