--- a/app/server/views/layout.jade
+++ b/app/server/views/layout.jade
@@ -1,4 +1,4 @@
-!!! 5
+doctype html
 html
 	head
 		meta(name='viewport', content='width=device-width, initial-scale=1.0')
@@ -6,19 +6,7 @@ html
 		link(rel='stylesheet', href='/vendor/bootstrap.css')
 		link(rel='stylesheet', href='/vendor/bootstrap-responsive.css')
 		link(rel='stylesheet', href='/css/style.css')
-		script(type='text/javascript')
-			var _gaq = _gaq || [];
-			_gaq.push(['_setAccount', 'UA-1890531-10']);
-			_gaq.push(['_setDomainName', 'braitsch.io']);
-			_gaq.push(['_trackPageview']);
-			(function() {
-				var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-				ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-				var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-			})();
 	body
-
 	- var capitalize = function(s){return s.replace(/\w\S*/g, function(txt){return txt.charAt(0).toUpperCase() + txt.substr(1).toLowerCase();});}
-
 	block content
 	block scripts
