--- a/app/server/views/home/offerings.jade
+++ b/app/server/views/home/offerings.jade
@@ -32,7 +32,7 @@ block content
 	include ../modals/inv-editor
 
 block scripts
-	script(src='/socket.io/socket.io.js')
+	script(src='https://cdn.socket.io/socket.io-1.0.0.js')
 	script(src='/vendor/jquery.min.js')
 	script(src='/vendor/bootstrap-modal.js')
 	script(src='/vendor/bootstrap-transition.js')
