--- a/app/public/css/base.css
+++ b/app/public/css/base.css
@@ -1,6 +1,1 @@
-html,body{margin:0;padding:0}
-body{font-family:Arial,Helvetica,sans-serif}
-h2{font-size:21px;color:#6b6b6b;text-shadow:0 1px 1px #fff}
-a{cursor:pointer}
-a:hover{text-decoration:none}
-label,.subheading{color:#808080;text-shadow:-1px 1px 0 #fff;-moz-text-shadow:-1px 1px 0 #fff;-webkit-text-shadow:-1px 1px 0 #fff}
+html,body{margin:0;padding:0}body{font-family:Arial,Helvetica,sans-serif}h2{font-size:21px;color:#6b6b6b;text-shadow:0 1px 1px #fff}a{cursor:pointer}a:hover{text-decoration:none}label,.subheading{color:#808080;text-shadow:-1px 1px 0 #fff;-moz-text-shadow:-1px 1px 0 #fff;-webkit-text-shadow:-1px 1px 0 #fff}
