--- a/app/public/css/layout.css
+++ b/app/public/css/layout.css
@@ -1,19 +1,1 @@
-.container,.navbar-fixed-top .container{width:960px}
-.row{margin-left:0}
-.navbar + .container{margin-top:40px}
-.services-wrapper{margin-top:60px}
-.reservation-wrapper{margin-top:30px;min-width:700px}
-.reservation-wrapper:first-child{margin-top:25px}
-.l-horizontal{margin:0;padding:0;list-style-type:none}
-.l-horizontal > li{display:inline;float:left;margin-left:10px}
-.l-horizontal > li:first-child{margin-left:0}
-.l-horizontal > li.pull-right{float:right}
-.wrapper-center{display:table;margin:0 auto}
-hr.tight{margin:18px 0 0}
-.page-container{position:fixed;background:#eee;top:40px;bottom:20px;width:100%}
-.page-container-cleared{background:#eee;width:100%;height:100%;padding-top:40px;min-width:1024px;padding-bottom:20px}
-@media (max-width: 979px){.page-container-cleared{padding-top:0}
-}.page-container .heading,.page-container-cleared .heading{color:#808080;text-shadow:-1px 1px 0 #fff;-moz-text-shadow:-1px 1px 0 #fff;-webkit-text-shadow:-1px 1px 0 #fff;font-size:1.4em;padding:20px 0 0 0}
-.center-container{width:940px;height:100%;margin:auto;text-align:center;padding:0 20px 0 20px}
-.footer{position:fixed;height:20px;bottom:0;width:100%;background:#222}
-.bridge-logo{position:absolute;top:4px;margin-left:-67px;width:134px;height:72px;background:url("/img/icons/ui/bridge-logo.png")}
+.container,.navbar-fixed-top .container{width:960px}.row{margin-left:0}.navbar + .container{margin-top:40px}.services-wrapper{margin-top:60px}.reservation-wrapper{margin-top:30px;min-width:700px}.reservation-wrapper:first-child{margin-top:25px}.l-horizontal{margin:0;padding:0;list-style-type:none}.l-horizontal > li{display:inline;float:left;margin-left:10px}.l-horizontal > li:first-child{margin-left:0}.l-horizontal > li.pull-right{float:right}.wrapper-center{display:table;margin:0 auto}hr.tight{margin:18px 0 0}.page-container{position:fixed;background:#eee;top:40px;bottom:20px;width:100%}.page-container-cleared{background:#eee;width:100%;height:100%;padding-top:40px;min-width:1024px;padding-bottom:20px}@media (max-width:979px){.page-container-cleared{padding-top:0}}.page-container .heading,.page-container-cleared .heading{color:#808080;text-shadow:-1px 1px 0 #fff;-moz-text-shadow:-1px 1px 0 #fff;-webkit-text-shadow:-1px 1px 0 #fff;font-size:1.4em;padding:20px 0 0 0}.center-container{width:940px;height:100%;margin:auto;text-align:center;padding:0 20px 0 20px}.footer{position:fixed;height:20px;bottom:0;width:100%;background:#222}.bridge-logo{position:absolute;top:4px;margin-left:-67px;width:134px;height:72px;background:url("/img/icons/ui/bridge-logo.png")}
