--- a/app/public/css/pages.css
+++ b/app/public/css/pages.css
@@ -1,76 +1,6 @@
-[class^="icon-"],[class*=" icon-"] {
+
+	[class^="icon-"],[class*=" icon-"] {
 		display: inline-block;
 		vertical-align: text-top;
 	}
-.icon-back-arrow{background:url("../img/icons/ui/icon-back-arrow.png") no-repeat top left;width:33px;height:21px}
-hr{height:1px;color:#ccc;background-color:#ccc}
-#select-services,#select-providers{margin-top:3%}
-#live{padding-top:40px;background:#eaeaea}
-#live .brand{padding-right:0}
-#live .status-icon{width:20px;height:20px;margin:8px 0 0 10px;background:url("/img/icons/ui/status-icon.png")}
-#live ul.dropdown-menu li{height:30px}
-#live .checkbox{margin:6px 3px}
-#live .org{margin:20px}
-#live p{font-size:18px;font-weight:bold}
-#live .orgName{float:left;margin-right:10px}
-#live .orgAddy{color:#27a3fa}
-#live hr{clear:both}
-#live .service{float:left;margin-right:10px;color:#777;width:190px;height:110px;padding:15px}
-#live .service .icon{float:left;margin-top:-2px}
-#live .service .text{margin:0 10px 0 34px}
-#live .service .text .name{float:left}
-#live .service .text .avail{text-align:right}
-#live .service hr{margin:5px 0 8px 0}
-#live .service .icon img{width:24px;height:auto}
-#live .service .sub{height:22px;margin-top:6px}
-#live .service .sub .bkgd{position:absolute;margin-top:-2px;width:190px;height:22px;opacity:.5;display:none;background-color:#008000}
-#login-container{width:340px;margin:160px auto;}
-#login-container label{margin:15px 0 5px 5px}
-#login-container button{width:150px;padding:6px 40px 6px 40px;float:left;margin-top:15px}
-#login-container .checkbox{margin:23px 0 0 180px}
-#login-container .btm-links{text-align:center;margin-top:10px}
-#login-container #create-account{float:right;margin-right:13px}
-#login-container #forgot-password{float:left;margin-left:10px}
-#signup-container{width:460px;margin:100px auto;}
-#signup-container #signup-page-2{display:none}
-#signup-container .well{padding-bottom:5px}
-#signup-container .dropdown{width:280px}
-#signup-container .two-line{margin-top:-9px}
-#signup-container .form-horizontal .controls{margin-left:100px}
-#signup-container .form-horizontal .control-label{width:90px}
-#signup-container .form-horizontal .form-actions{margin:0;padding-left:255px}
-#inventory #all-services{float:left;width:180px;height:100%;background:#eaeaea;border-right:thin double #ccc}
-#inventory #all-services .heading{text-align:center}
-#inventory #our-services{margin-left:180px;padding:0 20px 0 20px}
-#inventory #our-services .heading{padding-left:20px}
-#inventory .service{width:100px;height:140px;margin:auto;margin-bottom:10px;padding:10px 20px 6px 20px;color:#777;border:1px solid #ddd;background-color:#fff;border-radius:5px;-moz-border-radius:5px;-webkit-border-radius:5px}
-#inventory .service hr{margin:5px 0 3px 0}
-#inventory .service .icon{width:100%;height:125px;text-align:center;line-height:105px;cursor:pointer}
-#inventory #all-services .service .text{text-align:center}
-#inventory #our-services .service{position:relative;float:left;width:180px;margin-left:10px}
-#inventory #our-services .service .edit{width:28px;height:28px;cursor:pointer;position:absolute;top:-10px;right:-10px;background:url("/img/icons/ui/edit.png")}
-#inventory #our-services .service .text{float:left;text-align:left}
-#inventory #our-services .service .avail{text-align:right}
-#inventory #our-services .services{overflow:hidden;padding-top:18px}
-#inventory #our-services #edit-avail{display:none}
-#inventory #our-services #edit-avail .del,.add{position:absolute;top:34px;width:90px;height:110px;opacity:0;cursor:pointer;background-color:#333}
-#inventory #our-services #edit-avail .add{margin-left:90px}
-#inventory #our-services #edit-avail .icon-add,.icon-del{position:absolute;bottom:10px}
-#inventory #our-services #edit-avail .icon-add{right:18px}
-#inv-editor label{width:80px;text-align:right;margin-bottom:15px}
-#inv-editor input{width:50px;padding-right:10px;text-align:right;margin:-23px 0 0 95px}
-#team .heading{text-align:left;padding-left:20px}
-.member{padding:10px;margin:10px;color:#777;border:1px solid #ddd;background-color:#fff;border-radius:5px;-moz-border-radius:5px;-webkit-border-radius:5px;text-align:center;display:inline-block;*display:inline;*margin:0 20px 0 20px}
-.member .image{width:100px;height:100px;margin:auto;margin-bottom:10px;background-color:rgba(0,0,0,0.1);background-image:-webkit-gradient(linear,0 0,100% 100%,color-stop(.25,rgba(255,255,255,0.2)),color-stop(.25,transparent),color-stop(.5,transparent),color-stop(.5,rgba(255,255,255,0.2)),color-stop(.75,rgba(255,255,255,0.2)),color-stop(.75,transparent),to(transparent));background-image:-webkit-linear-gradient(-45deg,rgba(255,255,255,0.2) 25%,transparent 25%,transparent 50%,rgba(255,255,255,0.2) 50%,rgba(255,255,255,0.2) 75%,transparent 75%,transparent);background-image:-moz-linear-gradient(-45deg,rgba(255,255,255,0.2) 25%,transparent 25%,transparent 50%,rgba(255,255,255,0.2) 50%,rgba(255,255,255,0.2) 75%,transparent 75%,transparent);background-image:-o-linear-gradient(-45deg,rgba(255,255,255,0.2) 25%,transparent 25%,transparent 50%,rgba(255,255,255,0.2) 50%,rgba(255,255,255,0.2) 75%,transparent 75%,transparent);background-image:linear-gradient(-45deg,rgba(255,255,255,0.2) 25%,transparent 25%,transparent 50%,rgba(255,255,255,0.2) 50%,rgba(255,255,255,0.2) 75%,transparent 75%,transparent);-webkit-background-size:30px 30px;-moz-background-size:30px 30px;background-size:30px 30px}
-#clients-page .heading{text-align:left;padding-left:20px}
-#clients-page #controls{position:absolute;top:4px;right:323px}
-#clients-page #controls{padding:10px}
-#clients-page #controls .input-medium{width:225px;margin:0}
-#clients-page #controls #search{width:80px}
-#clients-page #controls #register{width:120px}
-#clients-page .member{cursor:pointer;position:relative}
-#clients-page .member .edit{width:28px;height:28px;cursor:pointer;position:absolute;top:-8px;right:-8px;background:url("/img/icons/ui/edit.png")}
-#add-client .well{height:316px}
-#add-client #btn1,#btn2{top:445px}
-#edit-client .well{height:261px}
-#edit-client #btn1,#edit-client #btn2{top:390px}
+.icon-back-arrow{background:url("../img/icons/ui/icon-back-arrow.png") no-repeat top left;width:33px;height:21px}hr{height:1px;color:#ccc;background-color:#ccc}#select-services,#select-providers{margin-top:3%}#live{padding-top:40px;background:#eaeaea}#live .brand{padding-right:0}#live .status-icon{width:20px;height:20px;margin:8px 0 0 10px;background:url("/img/icons/ui/status-icon.png")}#live ul.dropdown-menu li{height:30px}#live .checkbox{margin:6px 3px}#live .org{margin:20px}#live p{font-size:18px;font-weight:bold}#live .orgName{float:left;margin-right:10px}#live .orgAddy{color:#27a3fa}#live hr{clear:both}#live .service{float:left;margin-right:10px;color:#777;width:190px;height:110px;padding:15px}#live .service .icon{float:left;margin-top:-2px}#live .service .text{margin:0 10px 0 34px}#live .service .text .name{float:left}#live .service .text .avail{text-align:right}#live .service hr{margin:5px 0 8px 0}#live .service .icon img{width:24px;height:auto}#live .service .sub{height:22px;margin-top:6px}#live .service .sub .bkgd{position:absolute;margin-top:-2px;width:190px;height:22px;opacity:.5;display:none;background-color:#008000}#login-container{width:340px;margin:160px auto;}#login-container label{margin:15px 0 5px 5px}#login-container button{width:150px;padding:6px 40px 6px 40px;float:left;margin-top:15px}#login-container .checkbox{margin:23px 0 0 180px}#login-container .btm-links{text-align:center;margin-top:10px}#login-container #create-account{float:right;margin-right:13px}#login-container #forgot-password{float:left;margin-left:10px}#signup-container{width:460px;margin:100px auto;}#signup-container #signup-page-2{display:none}#signup-container .well{padding-bottom:5px}#signup-container .dropdown{width:280px}#signup-container .two-line{margin-top:-9px}#signup-container .form-horizontal .controls{margin-left:100px}#signup-container .form-horizontal .control-label{width:90px}#signup-container .form-horizontal .form-actions{margin:0;padding-left:255px}#inventory #all-services{float:left;width:180px;height:100%;background:#eaeaea;border-right:thin double #ccc}#inventory #all-services .heading{text-align:center}#inventory #our-services{margin-left:180px;padding:0 20px 0 20px}#inventory #our-services .heading{padding-left:20px}#inventory .service{width:100px;height:140px;margin:auto;margin-bottom:10px;padding:10px 20px 6px 20px;color:#777;border:1px solid #ddd;background-color:#fff;border-radius:5px;-moz-border-radius:5px;-webkit-border-radius:5px}#inventory .service hr{margin:5px 0 3px 0}#inventory .service .icon{width:100%;height:125px;text-align:center;line-height:105px;cursor:pointer}#inventory #all-services .service .text{text-align:center}#inventory #our-services .service{position:relative;float:left;width:180px;margin-left:10px}#inventory #our-services .service .edit{width:28px;height:28px;cursor:pointer;position:absolute;top:-10px;right:-10px;background:url("/img/icons/ui/edit.png")}#inventory #our-services .service .text{float:left;text-align:left}#inventory #our-services .service .avail{text-align:right}#inventory #our-services .services{overflow:hidden;padding-top:18px}#inventory #our-services #edit-avail{display:none}#inventory #our-services #edit-avail .del,.add{position:absolute;top:34px;width:90px;height:110px;opacity:0;cursor:pointer;background-color:#333}#inventory #our-services #edit-avail .add{margin-left:90px}#inventory #our-services #edit-avail .icon-add,.icon-del{position:absolute;bottom:10px}#inventory #our-services #edit-avail .icon-add{right:18px}#inv-editor label{width:80px;text-align:right;margin-bottom:15px}#inv-editor input{width:50px;padding-right:10px;text-align:right;margin:-23px 0 0 95px}#team .heading{text-align:left;padding-left:20px}.member{padding:10px;margin:10px;color:#777;border:1px solid #ddd;background-color:#fff;border-radius:5px;-moz-border-radius:5px;-webkit-border-radius:5px;text-align:center;display:inline-block;*display:inline;*margin:0 20px 0 20px}.member .image{width:100px;height:100px;margin:auto;margin-bottom:10px;background-color:rgba(0,0,0,0.1);background-image:-webkit-gradient(linear,0 0,100% 100%,color-stop(.25,rgba(255,255,255,0.2)),color-stop(.25,transparent),color-stop(.5,transparent),color-stop(.5,rgba(255,255,255,0.2)),color-stop(.75,rgba(255,255,255,0.2)),color-stop(.75,transparent),to(transparent));background-image:-webkit-linear-gradient(-45deg,rgba(255,255,255,0.2) 25%,transparent 25%,transparent 50%,rgba(255,255,255,0.2) 50%,rgba(255,255,255,0.2) 75%,transparent 75%,transparent);background-image:-moz-linear-gradient(-45deg,rgba(255,255,255,0.2) 25%,transparent 25%,transparent 50%,rgba(255,255,255,0.2) 50%,rgba(255,255,255,0.2) 75%,transparent 75%,transparent);background-image:-o-linear-gradient(-45deg,rgba(255,255,255,0.2) 25%,transparent 25%,transparent 50%,rgba(255,255,255,0.2) 50%,rgba(255,255,255,0.2) 75%,transparent 75%,transparent);background-image:linear-gradient(-45deg,rgba(255,255,255,0.2) 25%,transparent 25%,transparent 50%,rgba(255,255,255,0.2) 50%,rgba(255,255,255,0.2) 75%,transparent 75%,transparent);-webkit-background-size:30px 30px;-moz-background-size:30px 30px;background-size:30px 30px}#clients-page .heading{text-align:left;padding-left:20px}#clients-page #controls{position:absolute;top:4px;right:323px}#clients-page #controls{padding:10px}#clients-page #controls .input-medium{width:225px;margin:0}#clients-page #controls #search{width:80px}#clients-page #controls #register{width:120px}#clients-page .member{cursor:pointer;position:relative}#clients-page .member .edit{width:28px;height:28px;cursor:pointer;position:absolute;top:-8px;right:-8px;background:url("/img/icons/ui/edit.png")}#add-client .well{height:316px}#add-client #btn1,#btn2{top:445px}#edit-client .well{height:261px}#edit-client #btn1,#edit-client #btn2{top:390px}
