--- a/app/server/views/dashboard/select-services.jade
+++ b/app/server/views/dashboard/select-services.jade
@@ -1,7 +1,7 @@
 extends ../layout
 
 block content
-	script
+	script(type='text/javascript').
 		var orgs = !{JSON.stringify(orgs)};
 		var services = !{JSON.stringify(services)};
 	include dashboard-header
@@ -29,7 +29,7 @@ block content
 	include modals/service-selection
 
 block scripts
-	script(src='/socket.io/socket.io.js')
+	script(src='https://cdn.socket.io/socket.io-1.0.0.js')
 	script(src='/vendor/jquery.min.js')
 	script(src='/vendor/jquery.pubsub.js')
 	script(src='/vendor/underscore.min.js')
